src/snapshots/syntastic__ast__tests__ast__debug.snap
---
source: src/ast.rs
expression: example_ast()
---
Op(
    Operation {
        op: Operator {
            op: Plus,
            sort: Num,
            arity: [
                Num,
                Num,
            ],
        },
        args: [
            Val(
                Value {
                    val: 2,
                    sort: Num,
                },
            ),
            Op(
                Operation {
                    op: Operator {
                        op: Times,
                        sort: Num,
                        arity: [
                            Num,
                            Num,
                        ],
                    },
                    args: [
                        Val(
                            Value {
                                val: 3,
                                sort: Num,
                            },
                        ),
                        Var(
                            Variable {
                                var: X,
                                sort: Num,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
