src/snapshots/syntastic__ast__tests__ast__debug_snapshot.snap
---
source: src/ast.rs
expression: example_ast()
---
Ast(
    Operation(
        Plus,
        [
            Variable(
                Num(
                    2,
                ),
                PhantomData,
            ),
            Operation(
                Times,
                [
                    Variable(
                        Num(
                            3,
                        ),
                        PhantomData,
                    ),
                    Variable(
                        X,
                        PhantomData,
                    ),
                ],
            ),
        ],
    ),
)
