src/snapshots/syntastic__ast__tests__ast__display.snap
---
source: src/ast.rs
expression: example_ast()
---
([+ : ℕ -> ℕ -> ℕ] [2 : ℕ] ([× : ℕ -> ℕ -> ℕ] [3 : ℕ] [X : ℕ]))
