src/snapshots/syntastic__ast__tests__ast__json_snapshot.snap
---
source: src/ast.rs
expression: example_ast()
---
{
  "Operation": [
    "Plus",
    [
      {
        "Variable": [
          {
            "Num": 2
          }
        ]
      },
      {
        "Operation": [
          "Times",
          [
            {
              "Variable": [
                {
                  "Num": 3
                }
              ]
            },
            {
              "Variable": [
                "X"
              ]
            }
          ]
        ]
      }
    ]
  ]
}
