src/snapshots/syntastic__ast__tests__ast__ron.snap
---
source: src/ast.rs
expression: example_ast()
---
Ast(Operation(Plus, [
  Value(2),
  Operation(Times, [
    Value(3),
    Variable(X),
  ]),
]))
