src/snapshots/syntastic__ast__tests__ast__ron_snapshot.snap
---
source: src/ast.rs
expression: example_ast()
---
Ast(Operation(Plus, [
  Variable(Num(2)),
  Operation(Times, [
    Variable(Num(3)),
    Variable(X),
  ]),
]))
