src/snapshots/syntastic__ast__tests__ast__sexp_snapshot.snap
---
source: src/ast.rs
expression: example_ast().render_sexp()
---
([+ : ℕ -> ℕ -> ℕ] [2 : ℕ] ([× : ℕ -> ℕ -> ℕ] [3 : ℕ] [X : ℕ]))
